# BORUS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.rst  VERSION  app.overlay  pm_static.yml  pm_static_thingy53_nrf5340_cpuapp.yml  prj.conf  sample.yaml  sysbuild.conf
boards/nordic/torus53/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sysbuild  Kconfig.torus53  board.c  board.cmake  board.yml  pm_static_torus53_nrf5340_cpuapp.yml  pm_static_torus53_nrf5340_cpuapp_ns.yml  torus53_nrf5340_common.dtsi  torus53_nrf5340_cpuapp.dts  torus53_nrf5340_cpuapp.yaml  torus53_nrf5340_cpuapp_ns.dts  torus53_nrf5340_cpuapp_ns.yaml  torus53_nrf5340_cpunet.dts  torus53_nrf5340_cpunet.yaml
dock/: README.rst
src/: main.c
src/driver/: battery.c  bmi270.c  bmi270.h  bmp390.c  bmp390.h
src/feature/: README.rst  dsp_filters.c  dsp_filters.h  filter_coefficients.py  gait_analysis.c  gait_analysis.h
sysbuild/: ipc_radio.conf  mcuboot.conf
sysbuild/ipc_radio/: prj.conf
sysbuild/mcuboot/: app.overlay
tools/: README.rst  decode_bin.py
tools/hci_usb_ext_receiver/: README.rst  prj.conf
tools/hci_usb_ext_receiver/src/: main.c
tools/littlefs_file_extraction/: README.rst
